test_suite/tests/ui/duplicate-attribute/rename-and-ser.stderr
error: unknown serde field attribute `serialize`
 --> tests/ui/duplicate-attribute/rename-and-ser.rs:5:27
  |
3 | #[derive(Serialize)]
  |          --------- in this derive macro expansion
4 | struct S {
5 |     #[serde(rename = "x", serialize = "y")]
  |                           ^^^^^^^^^
  |
  = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
